--- a/_extensions/ukdri/ukdri.scss
+++ b/_extensions/ukdri/ukdri.scss
@@ -8,7 +8,7 @@ $font-family-sans-serif: Helvetica, "Source Sans Pro", sans-serif !default;
 // colors
 //$body-bg: #333333 !default;
 $body-color: #00326e !default;
-//$link-color: $body-color !default;
+$link-color: #fa2d6e !default;
 //
 //$code-bg: $body-color !default;
 //$code-color: $body-bg !default;
@@ -19,9 +19,9 @@ $body-color: #00326e !default;
 // headings
 //$presentation-heading-font: 'Yanone Kaffeesatz',  Tahoma, sans-serif  !default;
 $presentation-heading-color: #00326e !default;
-$h1-font-size: 1.6em !default;
-$h2-font-size: 1.3em !default;
-$h3-font-size: 1.15em !default;
+//$h1-font-size: 1.3em !default;
+//$h2-font-size: 1.0em !default;
+//$h3-font-size: 0.75em !default;
 
 /*-- scss:rules --*/
 
@@ -35,7 +35,7 @@ $h3-font-size: 1.15em !default;
 }
 
 #title-slide .author, #title-slide .quarto-title-author-name {
-  color: $body-color;
+  color: #FFFFFF;
 }
 
 // this add a vertical line
@@ -50,18 +50,6 @@ $h3-font-size: 1.15em !default;
 //}
 
 /* set horizontal line under header */
-//.reveal .slide h2::after {
-//    content:' ';
-//    display:block;
-//    border:2px solid #0ac8ff;
-//    border-radius:0px;
-//    -webkit-border-radius:4px;
-//    -moz-border-radius:4px;
-//    box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
-//    -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
-//    -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
-//}
-
 .reveal .slide h2::after {
   content: "";
   display: block;
@@ -72,9 +60,9 @@ $h3-font-size: 1.15em !default;
   margin-bottom: 1em;
 }
 
-//.reveal .slide h2 {
-//  font-size: 40px;
-//}
+.reveal .slide h2 {
+  font-size: 40px;
+}
 
 #title-slide p, #title-slide a {
   color: #0ac8ff;
